[B]Version 1.0.3[/B]
- Fixed playback when only one stream is available

[B]Version 1.0.2[/B]
- Improved login logic

[B]Version 1.0.1[/B]
- Updated to use new login system on yousee.tv

[B]Version 1.0.0[/B]
- Initial release.