@@ -3,7 +3,7 @@
     <requires>
         <import addon="xbmc.python" version="1.0"/>
         <import addon="script.module.danishaddons" version="1.1.0"/>
-        <import addon="script.module.elementtree" version="2.0.10"/>
+        <import addon="script.module.elementtree" version="1.2.7"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
