@@ -2,7 +2,7 @@
 <addon id="plugin.video.vegaplayer.dk" version="1.0.2" name="VEGA Player" provider-name="twinther [tommy@winther.nu]">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
-	<import addon="script.module.elementtree" version="2.0.10"/>
+	<import addon="script.module.elementtree" version="1.2.7"/>
     <import addon="script.module.danishaddons" version="1.1.0"/>
   </requires> 
   <extension point="xbmc.python.pluginsource" library="addon.py">
