@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.yousee.tv" version="1.0.3" name="YouSee web-tv" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.yousee.tv" version="1.0.4" name="YouSee web-tv" provider-name="twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="1.0"/>
         <import addon="script.module.danishaddons" version="1.1.0"/>
-        <import addon="script.module.elementtree" version="2.0.10"/>
+        <import addon="script.module.elementtree" version="1.2.7"/>
     </requires>
     <extension point="xbmc.python.pluginsource" library="addon.py">
         <provides>video</provides>
